# rust_ray_casting

./: Cargo.toml
src/: boundary.rs  main.rs  particle.rs  ray.rs
src/spare/: circle.rs  square.rs
