[package]
name = "rust_ray_casting"
version = "0.1.0"
authors = ["Jack-Sim <jackrsim1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.0"
piston_window = "0.111.0"
rand = "0.6.0"
perlin_noise = "1.0.1"